# rustc_codegen_c

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: check_build.yml  check_compile.yml.bak  filecheck.yml
src/: aggregate.rs  alloc.rs  base.rs  bb.rs  crepr.rs  definition.rs  expression.rs  fatptr.rs  function.rs  header.rs  include.rs  lib.rs  prefix.rs  stmt.rs  structure.rs  ty.rs  utils.rs  write.rs
tests/: dummy.rs  test_array.rs  test_array_func_arg.rs  test_bool.rs  test_cast.rs  test_char.rs  test_def_array.rs  test_def_bool.rs  test_def_char.rs  test_def_float.rs  test_def_int.rs  test_def_uint.rs  test_enum.rs  test_fake.rs  test_float.rs  test_int.rs  test_slice.rs  test_struct.rs  test_tuple.rs  test_uint.rs  test_union.rs
tests/e2e/: a.out  test_add.rs  test_arrays.rs  test_buffer.rs  test_factorial.rs  test_fibonacci_faster.rs  test_fibonacci_slow.rs  test_gcd.rs  test_max.rs  test_min.rs  test_mult.rs  test_sort  test_sort.rs
